--- a/ro-source/ch04/starbuzz/index.html
+++ b/ro-source/ch04/starbuzz/index.html
@@ -28,7 +28,7 @@
 
     <p>
         <a href="mission.html">Read about our Mission</a>.<br />Read the
-        <a href="http://wickedlysmart.com/buzz/#Coffee" title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
+        <a href="../buzz/index.html" title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
     </p>
 </body>
 </html>
