--- a/ro-source/ch11/lounge/lounge.html
+++ b/ro-source/ch11/lounge/lounge.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0">
     <title>Head First Lounge</title>
     <link type="text/css" rel="stylesheet" href="css/lounge.css">
 </head>
