--- a/ro-source/ch11/starbuzz-complete/index.html
+++ b/ro-source/ch11/starbuzz-complete/index.html
@@ -16,20 +16,20 @@
 <div id="tableContainer">
 <div id="tableRow">
 <div id="drinks">
-    <h1>BEVERAGE</h1>
+    <h1>BEVERAGES</h1>
         <p>House Blend, $1.49</p>
         <p>Mocha Cafe Latte, $2.35</p>
         <p>Cappuccino, $1.89</p>
         <p>Chai Tea, $1.85</p>
     <h1>ELIXIRS</h1>
-    <p>We proudly serve elixirs brewed by our friends at the Head First Lounge.</p>
-    <p>Green Tea Cooler, $2.99</p>
-    <p>Raspberry Ice Concentration $2.99</p>
-    <p>Blueberry Bliss Elixir, $2.99</p>
-    <p>Cranberry Antioxidant Blast, $2.99</p>
-    <p>Chai Chiller, $2.99</p>
-    <p>Black Brain Brew, $2.99</p>
-</div>
+        <p>We proudly serve elixirs brewed by our friends at the Head First Lounge.</p>
+        <p>Green Tea Cooler, $2.99</p>
+        <p>Raspberry Ice Concentration, $2.99</p>
+        <p>Blueberry Bliss Elixir, $2.99</p>
+        <p>Cranberry Antioxidant Blast, $2.99</p>
+        <p>Chai Chiller, $2.99</p>
+        <p>Black Brain Brew, $2.99</p>
+</div> <!-- drinks -->
 <div id="main">
     <h1>QUALITY COFFEE, QUALITY CAFFEINE</h1>
     <p>
@@ -41,12 +41,59 @@
     </p>
     <p>
         And, did we mention <em>caffeine</em>? We've just started funding the guys doing all the
-        wonderful research at
+        wonderful research at the
         <a href="http://buzz.wickedlysmart.com" title="Read all about caffeine on the Buzz">Caffeine Buzz</a>.
-        If you want the lates on coffee and other caffeine products, stop by and pay them a visit.
+        If you want the latest on coffee and other caffeine products, stop by and pay them a visit.
     </p>
-    
-</div>
-</div>
+    <h1>OUR STORY</h1>
+    <p>
+        "A man, a plan, a coffee bean". Okay, that doesn't make a palindrome, but it resulted in a damn good
+        cup of coffee. Starbuzz's CEO is that man, and you already know his plan: a Starbuzz on every corner.
+    </p>
+    <p>
+        In only a few years he's executed that plan and today you can enjoy Starbuzz just about anywhere.
+        And, of course, the big news this year is that Starbuzz teamed up with Head First readers to create
+        Starbuzz's Web presence, which is growing rapidly and helping to meet the caffeine needs of a whole
+        new set of customers.
+    </p>
+    <h1>STARBUZZ COFFEE BEVERAGES</h1>
+    <p>
+        We've got a variety of caffeinated beverages to choose from at Starbuzz, including our
+        <a href="#" title="House Blend">House Blend</a>,
+        <a href="#" title="Mocha Cafe Latte">Mocha Cafe Latte</a>,
+        <a href="#" title="Cappuccino">Cappuccino</a>, and a favorite of our customers,
+        <a href="#" title="Chai Tea">Chai Tea</a>.
+    </p>
+    <p>
+        We also offer a variety of coffee beans, whole or ground, for you to take home with you.
+        Order your coffee today using our online
+        <a href="#" title="form.html">Bean Machine</a>, and take the Starbuzz Coffee experience home.
+    </p>
+</div> <!-- main -->
+<div id="sidebar">
+    <p class="beanheading">
+        <img src="images/bag.gif" alt="Bean Machine bag"> <br />
+        ORDER ONLINE with the
+        <a href="#">BEAN MACHINE</a> <br />
+        <span class="slogan"> FAST <br /> FRESH <br /> TO YOUR DOOR <br /></span>
+    </p>
+    <p>
+        Why wait? You can order all our fine coffees right from the Internet with our new, automated
+        Bean Machine. How does it work? Just click on the Bean Machine link, enter your order, and behind
+        the scenes, your coffee is roasted, ground (if you want), packaged, and shipped to your door.
+    </p>
+</div> <!-- sidebar -->
+</div> <!-- tableRow -->
+</div> <!-- tableCounter -->
+
+<div id="coupon">
+    <a href="#" title="Click here to get your free coffee">
+        <img src="images/ticket.gif" alt="Starbuzz coupon ticket">
+    </a>
+</div> <!-- coupon -->
+<div id="footer">
+    &copy; 2012, Starbuzz Coffee <br /> All trademarks and
+    registered trademarks appearing on this site are the property of their respective owners.
+</div> <!-- footer -->
 </body>
 </html>
